--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1",
+    "ts-jest": "^26.4.4",
     "typescript": "~3.7.2",
     "uuidv4": "^6.1.0",
     "yup": "^0.29.1"
@@ -31,10 +32,22 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/pages/**/*.tsx",
+      "src/components/**/*.tsx",
+      "src/hooks/**/*.tsx",
+      "!src/hooks/index.tsx"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-icons)/)'"
+    ]
   },
   "browserslist": {
     "production": [
@@ -61,6 +74,7 @@
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "axios-mock-adapter": "^1.18.1",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
@@ -70,7 +84,6 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^2.0.4",
-    "react-app-rewired": "^2.1.5"
+    "prettier": "^2.0.4"
   }
 }
