--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.3.2",
+    "@testing-library/react-hooks": "^5.0.3",
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
     "@types/node": "^12.0.0",
@@ -73,7 +74,7 @@
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
-    "axios-mock-adapter": "^1.18.1",
+    "axios-mock-adapter": "^1.19.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -84,6 +85,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "react-test-renderer": "^17.0.1"
   }
 }
